ruts y contenido ready

--- a/home.html
+++ b/home.html
@@ -1,9 +1,35 @@
-<div class="row" >
-<iframe width="400" height="280" src="https://www.youtube.com/embed/tbAP6IGBax0" frameborder="0" allowfullscreen></iframe>
+<!-- <h3 class="white-text" >{{title}}</h3> -->
+<div style="margin-top: 15%" class="row center">
+	<div class="col m3 s2"></div>
+	<div class="col m6 s0">
+			<img class="responsive-img" src="img/logotext.png" alt="">
+	</div>
+</div>
+<div class="menuhome row center"> 
+		<div class="col m2 s0"></div>
+		 
+		
+		<div onclick="window.location='#/capitulos';" class="col m2 s3">
+	    	<a href="#/capitulos">Capitulos</a>
+	    	<hr class="menuhr">
+		</div>
 
+		<div onclick="window.location='#/notas';" class="col m2 s3">
+    		<a href="#/notas">Noticias</a>
+    		<hr class="menuhr">
+		</div>
+
+		<div onclick="window.location='#/actividades';" class="col m2 s3">
+	    	<a href="#/actividades">Eventos</a>
+	    	<hr class="menuhr">
+		</div>
+
+	
+		<div onclick="window.location='#/contact';" class="col m2 s3">
+    		<a href="#/contact">Contacto</a>
+    		<hr class="menuhr">
+		</div>
+
+ 
 </div>
 
-
-<div class="row" >
-	<iframe width="400" height="280" src="https://www.youtube.com/embed/m_i4W-ofOSQ" frameborder="0" allowfullscreen></iframe>
-</div>
