--- a/menu.html
+++ b/menu.html
@@ -1,18 +1,35 @@
-  
-<div>
+<div class="col m6 s8 right" >
+	<div class="menuup row center"> 
+ 
+		<div class="col m1 s0"></div>
+		<div onclick="window.location='#/home';" class="col m2 s2">
+			<a href="#/home">Inicio</a>
+			<hr class="menuuphr">
+		</div>	
+		
+		<div onclick="window.location='#/capitulos';" class="col m3 s3">
+	    	<a href="#/capitulos">Capitulos</a>
+	    	<hr class="menuuphr">
+		</div>
 
-	 <a href="#/home">Inicio</a>
+	   <div onclick="window.location='#/notas';" class="col m2 s3">
+    		<a href="#/notas">Noticias</a>
+    		<hr class="menuuphr">
+		</div>
 
-    <a href="#/editar">Editar</a>
+		<div onclick="window.location='#/actividades';" class="col m2 s3">
+	    	<a href="#/actividades">Eventos</a>
+	    	<hr class="menuuphr">
+		</div>
 
-    <a href="#/historial">Historial</a>
-
-     <a href="#/participantes">Participantes</a>
-
-       <a href="#/adminhome">contenido</a>
-
-
-
-
+	
+		<div onclick="window.location='#/contact';" class="col m2 s3">
+    		<a href="#/contact">Contacto</a>
+    		<hr class="menuuphr">
+		</div>
+	</div>
 </div>
+<br>
+ 
+<hr>
  
